# bulb

./: CMakeLists.txt  README.md
include/: bulb_banlist.h  bulb_client.h  bulb_macros.h  bulb_server.h  bulb_structs.h  client.h  server.h
src/: CMakeLists.txt  bulb_version.h.in  console_io.c  console_io.h  main.c  trie.c  trie.h  unisock.c  unisock.h  util.c  util.h
src/cli/: CMakeLists.txt  cli_client.c  cli_client.h  cli_server.c  cli_server.h  cli_util.c  cli_util.h  main.c
src/client/: CMakeLists.txt  client.c  client.h  client_name.h  main.c
src/server/: CMakeLists.txt  banlist.c  main.c  server.c  server.h  server_name.h
src/shared/: CMakeLists.txt  bulb_macros.h  client_node.c  client_node.h  cmds.c  cmds.h  networking.c  networking.h  obj_process.c  obj_process.h  obj_reader.c  obj_reader.h  server_node.c  server_node.h  shared_interface.c  shared_interface.h  test_func.c  test_func.h
src/shared/msg_obj/: CMakeLists.txt  bulb_obj.c  bulb_obj.h  connect_obj.c  connect_obj.h  disconnect_obj.c  disconnect_obj.h  message_obj.c  message_obj.h  ping_obj.c  ping_obj.h  received_obj.c  received_obj.h  stdout_obj.c  stdout_obj.h  update_userinfo_obj.c  update_userinfo_obj.h  userinfo_obj.c  userinfo_obj.h
